Fix layout issue on smaller screen

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -56,3 +56,7 @@ header {
   width: rem-calc(100);
   float: right;
 }
+
+.min-width-buttons {
+    min-width: 100px;
+}
